[galleon-provisioning] provision EAPs with eap-maven-plugin and galleon layers
eap.zip.url parameter and downloading of EAP no longer required
-DskipTests properly skips provisioning (improvement)