@@ -264,20 +264,45 @@
     </profile>
 
     <profile>
-      <id>download-server</id>
+      <id>provision-test-eap</id>
       <activation>
-        <property>
-          <name>eap.zip.url</name>
-        </property>
+        <property><name>!skipTests</name></property>
       </activation>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.jboss.eap.plugins</groupId>
+            <artifactId>eap-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>package</goal>
+                </goals>
+              </execution>
+            </executions>
+            <!-- Layers, excluded layers and scripts are inherited from parent's plugin config -->
+            <configuration>
+              <layers combine.children="append">
+                <layer>h2-driver</layer>
+              </layers>
+              <packaging-scripts>
+                <packaging-script>
+                  <scripts combine.children="append">
+                    <script>../eap-scripts/inmemory-h2db.cli</script>
+                    <script>../eap-scripts/configure-basic-auth.cli</script>
+                  </scripts>
+                </packaging-script>
+              </packaging-scripts>
+              <skipDeployment>true</skipDeployment>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
               <execution>
-                <id>download-and-extract-eap-server</id>
+                <id>add-pnc-config</id>
                 <goals>
                   <goal>run</goal>
                 </goals>
@@ -285,170 +310,13 @@
                 <configuration>
                   <target>
                     <!-- If JBOSS_HOME is set it causes obscure errors with CLI in -->
-                    <!-- wildfly-maven-plugin. -->
                     <property environment="env" />
                     <fail message="JBOSS_HOME must not be set" if="env.JBOSS_HOME" />
 
-                    <echo>Preparing EAP application server</echo>
-                    <echo>EAP URL ${eap.zip.url}</echo>
-                    <fail message="Please specify EAP zip file URL via: -Deap.zip.url=" unless="eap.zip.url" />
-                    <mkdir dir="${test.server.unpack.dir}" />
-                    <get usetimestamp="true" src="${eap.zip.url}" skipexisting="true" dest="${test.server.unpack.dir}/${app.server}-${jboss.version}.zip" />
-                    <unzip src="${test.server.unpack.dir}/${app.server}-${jboss.version}.zip" dest="${test.server.unpack.dir}/" overwrite="true" />
-
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-users.properties" append="true">admin=c69ec5f656856757f633c7c4619f79be${line.separator}</echo> <!-- pass is user.1234 -->
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-roles.properties" append="true">admin=user${line.separator}</echo>
-
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-users.properties" append="true">user=03fe1faad605609791524ce0b2c0ca30${line.separator}</echo> <!-- pass is pass.1234 -->
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-roles.properties" append="true">user=user${line.separator}</echo>
-
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-users.properties" append="true">system=2a1410b11545f3c5f4f6bfbdefb70eb0${line.separator}</echo> <!-- pass is system.1234 -->
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-roles.properties" append="true">system=user,pnc-users-admin${line.separator}</echo>
-
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-users.properties" append="true">demo-user=39af16736bfd4f0430d2351ccf0b108a${line.separator}</echo> <!-- pass is system.1234 -->
-                    <echo file="${test.server.unpack.dir}/${app.server}-${jboss.version}/standalone/configuration/application-roles.properties" append="true">demo-user=user${line.separator}</echo>
-
-                    <copy file="src/test/resources/pnc-config.json" tofile="${test.server.unpack.dir}/${app.server}-${jboss.version}/pnc-config.json" />
-
+                    <echo>Copying pnc-config into provisioned EAP</echo>
+                    <copy file="src/test/resources/pnc-config.json" tofile="${test.server.build.dir}/pnc-config.json" />
                   </target>
                 </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>configure-test-container</id>
-      <activation>
-        <property>
-          <name>eap.zip.url</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.hsqldb</groupId>
-          <artifactId>hsqldb</artifactId>
-          <scope>compile</scope>
-          <classifier>debug</classifier>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.wildfly.plugins</groupId>
-            <artifactId>wildfly-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>start-server</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>start</goal>
-                </goals>
-                <configuration>
-                  <jbossHome>${test.server.build.dir}</jbossHome>
-                  <java-opts>
-                    <java-opt>--add-modules=java.se</java-opt>
-                  </java-opts>
-                </configuration>
-              </execution>
-              <!-- HSQLDB JDBC driver installation and datasource configuration -->
-              <execution>
-                <id>deploy-hsql-jdbc-driver</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>deploy-artifact</goal>
-                </goals>
-                <configuration>
-                  <groupId>org.hsqldb</groupId>
-                  <artifactId>hsqldb</artifactId>
-                  <classifier>debug</classifier>
-                </configuration>
-              </execution>
-              <execution>
-                <id>add-hsql-datasource</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>add-resource</goal>
-                </goals>
-                <configuration>
-                  <address>subsystem=datasources,data-source=java:jboss/datasources/NewcastleTestDS</address>
-                  <resources>
-                    <resource>
-                      <properties>
-                        <jndi-name>java:jboss/datasources/NewcastleTestDS</jndi-name>
-                        <enabled>true</enabled>
-                        <connection-url>jdbc:hsqldb:mem:newcastletestmemdb</connection-url>
-                        <driver-class>org.hsqldb.jdbc.JDBCDriver</driver-class>
-                        <driver-name>hsqldb-2.7.1-debug.jar</driver-name>
-                        <user-name>sa</user-name>
-                        <password>sa</password>
-                      </properties>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-              <!-- End HSQLDB configuraiton -->
-              <execution>
-                <id>change-logging-level</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>execute-commands</goal>
-                </goals>
-                <configuration>
-                  <execute-commands>
-<!--                    <batch>true</batch>-->
-                    <commands>
-                      <command>
-                        /subsystem=logging/logger=org:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=io:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=javax:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.jboss.pnc:add(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/console-handler=CONSOLE:change-log-level(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/root-logger=ROOT:change-root-log-level(level=DEBUG)
-                      </command>
-
-                      <!-- Add microprofile stuff -->
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.config-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-config-smallrye:add
-                      </command>
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.fault-tolerance-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-fault-tolerance-smallrye:add
-                      </command>
-                      <!--log sql queries and parameter bindings-->
-                      <!--command>
-                        /subsystem=logging/logger=org.hibernate.SQL:add(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.hibernate.type:add(level=TRACE)
-                      </command-->
-                    </commands>
-                  </execute-commands>
-                </configuration>
-              </execution>
-              <execution>
-                <id>shutdown-server</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>shutdown</goal>
-                </goals>
               </execution>
             </executions>
           </plugin>
